Check if changes are deployed

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<h1> WORD COUNT </h1>
+<h1> WORD COUNT (BHAKTS) </h1>
 
 <form action="{% url 'count' %}">
     <textarea cols="40" rows="5" name="fulltext"></textarea>
